// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VirtualElement with properties 1`] = `
TextDiv {
  "element": <div>
    VirtualDivElement. 
  </div>,
}
`;

exports[`example of appendChildren 1`] = `
<div>
  <div>
    VirtualDivElement
  </div>
  <div>
    HTMLDivElement
  </div>
  TextNode. 
</div>
`;

exports[`example of createElement of HTML element 1`] = `
<div
  style="
        color: red;
      "
>
  HTMLDivElement. 
</div>
`;

exports[`example of createElement of VirtualElement 1`] = `
ColorDiv {
  "element": <div
    style="color: red;"
  >
    VirtualDivElement. 
  </div>,
}
`;

exports[`minimum VirtualElement 1`] = `
TSDiv {
  "element": <div>
    VirtualDivElement
  </div>,
}
`;

exports[`render to existing element 1`] = `
TextDiv {
  "element": <div>
    VirtualDivElement. 
  </div>,
}
`;

exports[`usage with JavaScript 1`] = `
<div>
  TextNode
  <div>
    HTMLDivElement
  </div>
  <div>
    VirtualDivElement
  </div>
</div>
`;

exports[`usage with TypeScript 1`] = `
<div>
  TextNode
  <div>
    HTMLDivElement
  </div>
  <div>
    VirtualDivElement
  </div>
</div>
`;
